--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<h1>Home Page</h1>
+<div class="p-4">
+    <div class="container">
+        <h1>¡Hola {{user?.firstName}}!</h1>
+        <p>¡Bienvenido a la plataforma de contratación online Minka!</p>
+    </div>
+</div>
