--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,6 @@
 
 <div class="p-4">
     <div class="container">
-        <h1>¡Hola {{user?.firstName}}!</h1>
-        <p>¡Bienvenido a la plataforma de contratación online Minka!</p>
+ This is home
     </div>
 </div>
