--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,9 @@
 
 <div class="p-4">
+    <footer></footer>
     <div class="container">
         <h1>¡Hola {{user?.firstName}}!</h1>
         <p>¡Bienvenido a la plataforma de contratación online Minka!</p>
     </div>
+    
 </div> 
