--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,12 @@
 
+
 <div class="p-4">
 
     <div class="container">
         <h1>¡Hola {{user?.firstName}}!</h1>
         <p>¡Bienvenido a la plataforma de contratación online Minka!</p>
     </div>
+ 
     
 </div> 
+<div class="sidebar"><app-sidebar></app-sidebar></div>
