--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -12,8 +12,8 @@
         </li>
       </ul>
       <div class=" copyright">
-        &copy; {{ test | date: "yyyy" }} made with
-        <i class=" tim-icons icon-heart-2"> </i> by
+        &copy; {{ test | date: "yyyy" }} made 
+    by
         <a href="" target="_blank"> romanfullstack.com </a>
         do web better.
       </div>
