--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -1,4 +1,4 @@
-<div class="container col-md-6 offset-md-3 mt-5">
+<div class="container bg-dark col-md-6 offset-md-3 mt-5">
   
     <div class="card">
         <h4 class="card-header">Register</h4>
