--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,10 @@
         <button class="btn btn-link nav-item nav-link" (click)="logout()">Logout</button>
     </div>
     
-</nav>
+</nav> 
+
+<app-navbar></app-navbar>
+
 
 <!-- main app container -->
 <div class="container"  style="height: 100vh;">
