--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,24 +2,21 @@
   <div class=" container-fluid">
     <ul class=" nav">
       <li class=" nav-item">
-        <a class=" nav-link" href="https://www.creative-tim.com?ref=bda-footer">
-          Creative Tim
+        <a class=" nav-link" href="">
+          Sobre Minka
         </a>
       </li>
       <li class=" nav-item">
-        <a class=" nav-link" href="https://www.creative-tim.com/about-us?ref=bda-footer">
-          About Us
+        <a class=" nav-link" href="">
+          Politica de Privacidad
         </a>
       </li>
-      <li class=" nav-item">
-        <a class=" nav-link" href="http://blog.creative-tim.com?ref=bda-footer"> Blog </a>
-      </li>
+  
     </ul>
     <div class=" copyright">
-      &copy; {{ test | date: "yyyy" }} made with
-      <i class=" tim-icons icon-heart-2"> </i> by
-      <a href="https://www.creative-tim.com?ref=bda-footer" target="_blank"> Creative Tim </a>
-      for a better web.
+      &copy; {{ test | date: "yyyy" }} hecho en 
+      <a href="" target="_blank">romanfullstuck.com </a>
+     we'b be better.
     </div>
   </div>
 </footer>
