--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -14,7 +14,7 @@
   
     </ul>
     <div class=" copyright">
-      &copy; {{ test | date: "yyyy" }} hecho en 
+      &copy; {{ test | date: "yyyy" }} Made by 
       <a href="" target="_blank">romanfullstuck.com </a>
      we'b be better.
     </div>
