--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
     
  
     <button
-      aria-label="{{ 'NAVIGATION.toggle' | translate }}"
+      aria-label="Toggle navbar"
       class=" navbar-toggler"
       (click)="collapse()"
       [attr.aria-expanded]="!isCollapsed"
@@ -39,7 +39,7 @@
             id="search-button"
           >
             <i class=" tim-icons icon-zoom-split"> </i>
-            <span class=" d-lg-none d-md-block"> {{NAVIGATION.search | translate}} </span>
+            <span class=" d-lg-none d-md-block"> Search </span>
           </button>
         </li>
         <li class=" nav-item" ngbDropdown>
