--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <div class="logo">
-  <a href="https://www.creative-tim.com?ref=bda-sidebar-logo" class="simple-text logo-mini">
+  <a href="https://www.doitminka.com" class="simple-text logo-mini">
     <div class="logo-img">
       <img src="./assets/img/logo_minka.png" />
     </div>
   </a>
-  <a href="https://www.creative-tim.com?ref=bda-sidebar-logo" class="simple-text logo-normal">
+  <a href="https://www.doitminka.com" class="simple-text logo-normal">
     MINK'A
   </a>
 </div>
