--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -1,142 +1,80 @@
+<div class="wrapper">
+  <div class="container col-md-6 offset-md-3 mt-5">
+    <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+          <div class="row">
+            <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+            <div class="card">
+              
+                  <div class=" card-header"><h1 class=" title">Registro</h1></div>
+                  <div class=" card-body">
+                    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                      <div class=" row">
 
-<div class="container col-md-6 ">
-    <div class=" content">
-        <div class="row">
-          <div class=" ">
-              <div class=" card mt-2 mb-2">
-                <div class=" card-header"><h1 class=" title">Login</h1></div>
-                <div class=" card-body">
-                  <form (ngSubmit)="register()">
-                    <div class=" row">
-                      <div class=" col-md-5 pr-md-1">
-                        <div class=" form-group">
-                          <label> Company (disabled) </label>
-                          <input
-                            class=" form-control"
-                            disabled=""
-                            placeholder="Company"
-                            type="text"
-                            value="Creative Code Inc."
-                          />
+                        <div class=" col-md-12">
+                          <div class=" form-group">
+                            <label class="form-label"> Nombre</label>
+                            <input type="text" formControlName="firstName" 
+                            placeholder="Escribe su nombre" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+                            <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+                                <div *ngIf="f.firstName.errors.required">Este campo és obligatorio</div>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class=" col-md-12">
+                          <div class=" form-group">
+                            <label class="form-label">Apellidos</label>
+                            <input type="text" formControlName="lastName" 
+                            placeholder="Escribe su apellido" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                            <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+                                <div *ngIf="f.lastName.errors.required">Este campo és obligatorio</div>
+                            </div>
+                          </div>
+                        </div>
+                      
+                        <div class=" col-md-12">
+                          <div class=" form-group">
+                            <label class="form-label"> Nombre de usuario </label>
+                            <input
+                              class=" form-control"
+                              [ngClass]="{ 'is-invalid': submitted && f.username.errors }"
+                              placeholder="Username"
+                              type="text"
+                              formControlName="username"
+                            />
+                            <div *ngIf="submitted && f.username.errors" class="invalid-feedback" >
+                              <div *ngIf="f.username.errors.required">Este campo és obligatorio</div>
+                            </div>
+                       
+                          </div>
+                        </div>
+                        <div class=" col-md-12">
+                          <div class=" form-group">
+                            <label class="form-label"> Contraseña</label>
+                            <input type="password" formControlName="password" 
+                            placeholder="Password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                                <div *ngIf="f.password.errors.required">Este campo és obligatorio</div>
+                                <div *ngIf="f.password.errors.minlength">Tiene que ser 6 caracteres o más</div>
+                            </div>
+                          </div>
                         </div>
                       </div>
-                      <div class=" col-md-3 px-md-1">
-                        <div class=" form-group">
-                          <label> Username </label>
-                          <input
-                            class=" form-control"
-                            placeholder="Username"
-                            type="text"
-                            value="michael23"
-                          />
-                        </div>
+                     
+                 
+                      <div class=" card-footer">
+                        <button [disabled]="loading" class=" btn btn-fill btn-danger" type="submit">
+                          <span *ngIf="loading" class="spinner-border spinner-border-sm me-1"></span>
+                          Registrar
+                          </button>
+                          <a routerLink="../login" class="btn btn-link">Cancelar</a>
                       </div>
-                      <div class=" col-md-4 pl-md-1">
-                        <div class=" form-group">
-                          <label for="exampleInputEmail1"> Email address </label>
-                          <input
-                            class=" form-control"
-                            placeholder="mike@email.com"
-                            type="email"
-                          />
-                        </div>
-                      </div>
-                    </div>
-                    <div class=" row">
-                      <div class=" col-md-6 pr-md-1">
-                        <div class=" form-group">
-                          <label> First Name </label>
-                          <input
-                            class=" form-control"
-                            placeholder="Company"
-                            type="text"
-                            value="Mike"
-                          />
-                        </div>
-                      </div>
-                      <div class=" col-md-6 pl-md-1">
-                        <div class=" form-group">
-                          <label> Last Name </label>
-                          <input
-                            class=" form-control"
-                            placeholder="Last Name"
-                            type="text"
-                            value="Andrew"
-                          />
-                        </div>
-                      </div>
-                    </div>
-                    <div class=" row">
-                      <div class=" col-md-12">
-                        <div class=" form-group">
-                          <label> Address </label>
-                          <input
-                            class=" form-control"
-                            placeholder="Home Address"
-                            type="text"
-                            value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09"
-                          />
-                        </div>
-                      </div>
-                    </div>
-                    <div class=" row">
-                      <div class=" col-md-4 pr-md-1">
-                        <div class=" form-group">
-                          <label> City </label>
-                          <input
-                            class=" form-control"
-                            placeholder="City"
-                            type="text"
-                            value="Mike"
-                          />
-                        </div>
-                      </div>
-                      <div class=" col-md-4 px-md-1">
-                        <div class=" form-group">
-                          <label> Country </label>
-                          <input
-                            class=" form-control"
-                            placeholder="Country"
-                            type="text"
-                            value="Andrew"
-                          />
-                        </div>
-                      </div>
-                      <div class=" col-md-4 pl-md-1">
-                        <div class=" form-group">
-                          <label> Postal Code </label>
-                          <input
-                            class=" form-control"
-                            placeholder="ZIP Code"
-                            type="number"
-                          />
-                        </div>
-                      </div>
-                    </div>
-                    <div class=" row">
-                      <div class=" col-md-8">
-                        <div class=" form-group">
-                          <label> About Me </label>
-                          <textarea
-                            class=" form-control"
-                            cols="80"
-                            placeholder="Here can be your description"
-                            rows="4"
-                            value="Mike"
-                          >
-        Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.
-        </textarea
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-                <div class=" card-footer">
-                  <button class=" btn btn-fill btn-danger" type="submit">Save</button>
-                </div>
+                    </form>
+                  </div>
+                  
+                
               </div>
-            </div>
-        </div>
-      </div>
-</div>
+          </div>
+        
+  </div>
+  </div>
