--- a/src/app/components/ng-carousel/ng-carousel.component.html
+++ b/src/app/components/ng-carousel/ng-carousel.component.html
@@ -3,7 +3,7 @@
 		<div class="picsum-img-wrapper">
 			<img [src]="images[0]" alt="Random first slide" />
 		</div>
-		<div class="carousel-caption">
+		<div class="carousel-caption" >
 			<h3>First slide label</h3>
 			<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
 		</div>
@@ -24,6 +24,15 @@
 		<div class="carousel-caption">
 			<h3>Third slide label</h3>
 			<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+		</div>
+	</ng-template>
+	<ng-template ngbSlide>
+		<div class="picsum-img-wrapper">
+			<img [src]="images[3]" alt="Random first slide" />
+		</div>
+		<div class="carousel-caption" >
+			<h3>First slide label</h3>
+			<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
 		</div>
 	</ng-template>
 </ngb-carousel>
