--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,23 +1,10 @@
 <div class="">
-  <ng-carousel></ng-carousel>
+
 </div>
-<div class="wrapper d-flex align-items-end  ">
-   
-    <!--<div class="container col-md-6 col-lg d-flex justify-content-end" >
-       
- 
-        <div class=" p-5 ">
-            <button class=" btn btn-fill btn-danger" type="submit">
- 
-                Login
-                </button>
-                <a routerLink="../register" class="btn btn-link">Register</a>
-        </div>
- 
-         
-           
-     
-    </div>-->
-   
-    </div>
-    <div class="d-flex justify-content-center ">     <app-footer></app-footer></div>
+<div class="wrapper d-flex justify-content-center ">
+    
+    
+
+
+</div>
+    <app-footer></app-footer>
