--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,9 +18,9 @@
       </div>
     <div class="d-flex ml-auto">
        
-        <a routerLink="/" class="btn btn-link nav-item nav-link">Home</a>
-      <button  class="btn btn-fill btn-success" type="submit" (click)="logout()">
-        Logout
+        <a routerLink="/dashboard" class="btn btn-link nav-item nav-link disabled ">Dashboard</a>
+      <button routerLink="/account/login" class="btn btn-fill btn-success" type="submit" (click)="login()">
+        Iniciar 
       </button>
       
     </div>
