Before Carousel on Home

--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -1,9 +1,10 @@
+<app-home></app-home>
 <div class="wrapper">
 <div class="container col-md-6 offset-md-3 mt-5">
-  <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+  
        
           
-          <div *ngIf="success" class="alert alert-success">{{success}}</div>
+         
           <div class="card">
             
                 <div class=" card-header"><h1 class=" title">Login</h1></div>
