--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,12 @@
 
 <div class=" content">
   <div class=" row">
+    <div class="p-4">
+      <div class="container">
+          <h1>Hi {{user?.firstName}}!</h1>
+          <p>You're logged in with Angular!!</p>
+      </div>
+  </div>
     <div class=" col-12">
       <div class=" card card-chart">
         <div class=" card-header">
