--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,35 @@
-<div class="">
-
-</div>
-<div class="wrapper d-flex justify-content-center ">
+<nav class="navbar navbar-expand navbar-dark bg-dark px-3" >
+    <div class="logo align-items-center ">
     
-    
+      <div class="logo-img d-flex m-1 mt-1 p-1">
+        <a href="https://www.doitminka.com" class="simple-text logo-mini">
+            <img src="./assets/img/logo_minka.png" />
+          </a>
+        </div>
 
-
-</div>
-    <app-footer></app-footer>
+        <div class="logo-text ml-3 mt-2 pl-4 " >
+        <a href="https://www.doitminka.com" class="simple-text logo-normal ">
+          <h3 class="m-0">INK'A</h3>
+        </a>
+      </div>
+      </div>
+    <div class="d-flex ml-auto">
+       
+        <a routerLink="/dashboard" class="btn btn-link nav-item nav-link disabled ">Dashboard</a>
+      <button routerLink="/account/login" class="btn btn-fill btn-success" type="submit">
+        Iniciar 
+      </button>
+      
+    </div>
+  </nav>
+  <div class="wrapper">
+    <div class="container col-md-6 offset-md-3 mt-5">
+      
+           
+              
+             <h1>   I am at Home, Darling! Minka it is so cool!</h1>
+      
+        
+    </div>
+    </div>
+  <app-footer></app-footer>
