--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,26 @@
 <!-- nav -->
 <nav class="navbar navbar-expand navbar-dark bg-dark px-3" *ngIf="user">
-  <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLink="/">Home</a>
-      <button class="btn btn-link nav-item nav-link" (click)="logout()">Logout</button>
+  <div class="logo align-items-center ">
+  
+    <div class="logo-img d-flex m-1 mt-1 p-1">
+      <a href="https://www.doitminka.com" class="simple-text logo-mini">
+          <img src="./assets/img/logo_minka.png" />
+        </a>
+      </div>
+
+      <div class="logo-text ml-3 mt-2 pl-4 " >
+      <a href="https://www.doitminka.com" class="simple-text logo-normal ">
+        <h3 class="m-0">INK'A</h3>
+      </a>
+    </div>
+    </div>
+  <div class="d-flex ml-auto">
+     
+      <a routerLink="/" class="btn btn-link nav-item nav-link  ">Home</a>
+    <button routerLink="/account/login" class="btn btn-fill btn-success" type="submit" (click)="logout()">
+      Iniciar 
+    </button>
+    
   </div>
 </nav>
 
