--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,14 @@
       
            
               
-             <h1>  Hi, {{user?.firstName}}! I am at Home, darling !! Minka it is so cool!</h1>
+             <h1>  Hi, {{user?.firstName}}! I am at Home, darling !! Minka it is so cool!</h1><div class="d-flex ml-auto">
+     
+             
+              
+              
+            </div>
+
+
       
         
     </div>
