Routing setting So far so good
zone.js

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,13 +1,17 @@
-<div class="logo">
-  <a href="https://www.doitminka.com" class="simple-text logo-mini">
-    <div class="logo-img">
-      <img src="./assets/img/logo_minka.png" />
+<div class="logo align-items-center ">
+  
+  <div class="logo-img d-flex m-1 mt-1 p-1">
+    <a href="" class="simple-text  logo-mini">
+        <img src="../assets/img/logo_minka.png" />
+      </a>
     </div>
-  </a>
-  <a href="https://www.doitminka.com" class="simple-text logo-normal">
-    MINK'A
-  </a>
-</div>
+
+    <div class="logo-text ml-3 mt-2 pl-4 " >
+    <a href="" class="simple-text logo-normal ">
+      <h3 class="m-0">INK'A</h3>
+    </a>
+  </div>
+  </div>
 <div class="sidebar-wrapper">
   <ul class="nav">
     <li
