--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,10 +1,11 @@
 
+
 <div class=" content">
   <div class=" row">
     <div class="p-4">
       <div class="container">
-          <h1>Hi {{user?.firstName}}!</h1>
-          <p>You're logged in with Angular!!</p>
+        <h4>  ¡Hola, {{user?.firstName}}!<br> ¡Estás en una versión demo de Mink'a!</h4>
+          
       </div>
   </div>
     <div class=" col-12">
