SideBar and NavBar good

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo align-items-center ">
   
   <div class="logo-img d-flex m-1 mt-1 p-1">
-    <a href="" class="simple-text  logo-mini">
+    <a href="" class="mt-1 ">
         <img src="../assets/img/logo_minka.png" />
       </a>
     </div>
