--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -146,16 +146,14 @@ Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.
             <div class=" block block-three"></div>
             <div class=" block block-four"></div>
             <a href="javascript:void(0)">
-              <img alt="..." class=" avatar" src="assets/img/mauricio_avatar.jpg" />
+              <img alt="..." class=" avatar" src="../../../assets/img/mauricio_avatar.jpg" />
 
-              <h5 class=" title">Mike Andrew</h5>
+              <h5 class=" title">Mauricio Jauregui Lauffer</h5>
             </a>
-            <p class=" description">Ceo/Co-Founder</p>
+            <p class=" description">Ceo en Mink'a</p>
           </div>
           <div class=" card-description">
-            Do not be scared of the truth because we need to restart the human
-            foundation in truth And I love you like Kanye loves Kanye I love
-            Rick Owens’ bed design but the back is...
+            "Mink'a es la plataforma en línea de contratos. Es el lugar donde los profesionales se encuentran con otros profesionales. Donde los proyectos industriales se hacen realidad. Donde los grandes sueños pueden convertirse en metas simples y su logro consiste en planificar mucho, trabajar duro y estar inspirado para hacer del mundo un lugar mejor. ¡Bienvenido a la comunidad profesional! ¡Bienvenido a Mink'a!"
           </div>
         </div>
         <div class=" card-footer">
