--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
 
     <div class="logo-text ml-3 mt-2 pl-4 " >
     <a href="" class="simple-text logo-normal ">
-      <h3 class="m-0">INK'A</h3>
+      <h3 class="m-0" style="color:whitesmoke;">INK'A</h3>
     </a>
   </div>
   </div>
