--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,6 @@
 
-  <div class="wrapper">
+  <div class="wrapper"><app-navbar ></app-navbar></div>
+
     <div class="container col-md-6 offset-md-3 mt-5">
       
            
@@ -15,5 +16,5 @@
       
         
     </div>
-    </div>
+    
 
