Before Big Cleaning

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<!-- nav -->
-<div *ngIf="user"></div>
 
+<alert></alert>
 <!-- main app container -->
 <div class="container">
-  
+    
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
