--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -1,5 +1,5 @@
 
-<div class="wrapper">
+<nav class="wrapper">
 <div class="container col-md-6 offset-md-3 mt-5">
   
        
@@ -55,4 +55,4 @@
             </div>
     
 </div>
-</div>
+</nav>
