--- a/src/app/pages/typography/typography.component.html
+++ b/src/app/pages/typography/typography.component.html
@@ -1,7 +1,7 @@
 
 <div class=" content">
-  <div class=" row">
-    <div class=" col-md-12">
+
+    <div class="d-lg-flex justify-content-center align-content-center">
       <div class=" card">
         <div class=" card-header mb-5">
           <h5 class=" card-category">Fecha efectiva: 21/06/2023</h5>
@@ -10,13 +10,13 @@
         </div>
         <div class=" card-body">
           <div class=" typography-line">
-            <h4 class="text-success"><span> Mink'a</span> Política de Privacidad
+            <h4 class="text-success"><span> Mink'a.</span> Política de Privacidad.
             </h4>
           </div>
   
           <div class=" typography-line">
             <p>
-              <span> En Mink'a </span>  operado por Mink'a S.C.P. (Número de identificación fiscal: J05349279), con sede en CP 08301 Mataró, Barcelona, Spain, nos comprometemos a proteger tu privacidad en línea y a mantener la confidencialidad de la información personal que puedas proporcionarnos mientras utilizas nuestra web app. Esta política de privacidad describe cómo recopilamos, utilizamos y protegemos tu información personal.
+              <span> En Mink'a </span>  operado por Mink'a S.C.P., con sede en CP 08301 Mataró, Barcelona, Spain, nos comprometemos a proteger tu privacidad en línea y a mantener la confidencialidad de la información personal que puedas proporcionarnos mientras utilizas nuestra web app. Esta política de privacidad describe cómo recopilamos, utilizamos y protegemos tu información personal.
 
             </p>
           </div>
@@ -58,5 +58,5 @@
         </div>
       </div>
     </div>
-  </div>
+
 </div>
