--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -1,5 +1,5 @@
 
-<div class="wrapper">
+<div class="main-panel">
   <div class="container col-md-6 offset-md-3 mt-5">
   
           <div class="row">
@@ -78,4 +78,4 @@
           </div>
         
   </div>
-  </div>
+</div>
