--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
+  <alert></alert>
 
-<alert></alert>
-<!-- main app container -->
-<div class="container">
-    
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
-</div>
+
+
+<router-outlet></router-outlet>
+
+<app-footer></app-footer>
+<div></div>
