First Ready for Build

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,12 +6,17 @@
           Politica de Privacidad
         </a>
       </li>
+      <li class=" nav-item">
+        <a class="nav-link" href="/" target="_blank">
+          Inicio
+        </a>
+      </li>
   
     </ul>
     <div class=" copyright">
       &copy; {{ today | date:"fullDate" }} Made by 
-      <a href="" target="_blank">romanfullstuck.com </a>
-     we'b be better.
+      <a href="" target="_blank">doitminka.com </a>
+    contracts online platform.
     </div>
   </div>
 </footer>
