--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -3,30 +3,30 @@
   <div class=" row">
     <div class=" col-md-8">
       <div class=" card">
-        <div class=" card-header"><h5 class=" title">Edit Profile</h5></div>
+        <div class=" card-header"><h5 class=" title">Editar Perfil</h5></div>
         <div class=" card-body">
           <form>
             <div class=" row">
               <div class=" col-md-5 pr-md-1">
                 <div class=" form-group">
-                  <label> Company (disabled) </label>
+                  <label> Empresa (disabled) </label>
                   <input
                     class=" form-control"
                     disabled=""
-                    placeholder="Company"
+                    placeholder="Empresa"
                     type="text"
-                    value="Creative Code Inc."
+                    value=""
                   />
                 </div>
               </div>
               <div class=" col-md-3 px-md-1">
                 <div class=" form-group">
-                  <label> Username </label>
+                  <label> Nombre de ususario </label>
                   <input
                     class=" form-control"
                     placeholder="Username"
                     type="text"
-                    value="michael23"
+                    value=""
                   />
                 </div>
               </div>
@@ -35,7 +35,7 @@
                   <label for="exampleInputEmail1"> Email address </label>
                   <input
                     class=" form-control"
-                    placeholder="mike@email.com"
+                    placeholder="info@doitminka.com"
                     type="email"
                   />
                 </div>
@@ -44,23 +44,23 @@
             <div class=" row">
               <div class=" col-md-6 pr-md-1">
                 <div class=" form-group">
-                  <label> First Name </label>
+                  <label> Nombre </label>
                   <input
                     class=" form-control"
-                    placeholder="Company"
+                    placeholder="Nombre"
                     type="text"
-                    value="Mike"
+                    value=""
                   />
                 </div>
               </div>
               <div class=" col-md-6 pl-md-1">
                 <div class=" form-group">
-                  <label> Last Name </label>
+                  <label> Apellidos </label>
                   <input
                     class=" form-control"
-                    placeholder="Last Name"
+                    placeholder="Apellido"
                     type="text"
-                    value="Andrew"
+                    value=""
                   />
                 </div>
               </div>
@@ -68,12 +68,12 @@
             <div class=" row">
               <div class=" col-md-12">
                 <div class=" form-group">
-                  <label> Address </label>
+                  <label> Domicilio </label>
                   <input
                     class=" form-control"
-                    placeholder="Home Address"
+                    placeholder="Tu domicilio"	
                     type="text"
-                    value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09"
+                    value=""
                   />
                 </div>
               </div>
@@ -81,32 +81,32 @@
             <div class=" row">
               <div class=" col-md-4 pr-md-1">
                 <div class=" form-group">
-                  <label> City </label>
+                  <label> Ciudad </label>
                   <input
                     class=" form-control"
-                    placeholder="City"
+                    placeholder="Ciudad"
                     type="text"
-                    value="Mike"
+                    value=""
                   />
                 </div>
               </div>
               <div class=" col-md-4 px-md-1">
                 <div class=" form-group">
-                  <label> Country </label>
+                  <label> Pais </label>
                   <input
                     class=" form-control"
                     placeholder="Country"
                     type="text"
-                    value="Andrew"
+                    value=""
                   />
                 </div>
               </div>
               <div class=" col-md-4 pl-md-1">
                 <div class=" form-group">
-                  <label> Postal Code </label>
+                  <label> CP </label>
                   <input
                     class=" form-control"
-                    placeholder="ZIP Code"
+                    placeholder="Código Postal"
                     type="number"
                   />
                 </div>
@@ -115,15 +115,15 @@
             <div class=" row">
               <div class=" col-md-8">
                 <div class=" form-group">
-                  <label> About Me </label>
+                  <label> Sobre mi </label>
                   <textarea
                     class=" form-control"
                     cols="80"
                     placeholder="Here can be your description"
                     rows="4"
-                    value="Mike"
+                    value=""
                   >
-Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.
+
 </textarea
                   >
                 </div>
@@ -132,7 +132,7 @@ Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.
           </form>
         </div>
         <div class=" card-footer">
-          <button class=" btn btn-fill btn-danger" type="submit">Save</button>
+          <button class=" btn btn-fill btn-danger" type="submit">Guardar</button>
         </div>
       </div>
     </div>
