--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,24 +47,24 @@
         
         <div class="carousel-item active">
           <img src="../../assets/img/eolicaIndustry.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-dark carousel-caption d-none d-md-block">
-            <h3>INDUSTRIA ENERGÉTICA</h3>
-            <p>Construyamos juntos un futuro sostenible y prometedor. </p>
+          <div class="carousel-dark carousel-caption d-none d-sm-block">
+            <h3 style="color: white;">INDUSTRIA ENERGÉTICA</h3>
+            <p style="color: white;">Construyamos juntos un futuro sostenible y prometedor. </p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../../assets/img/fabricRobot.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h3>AUTOMATIZACIÓN</h3>
-            <p>Facilitar la contratación de expertos en automatización y asegurar que las empresas encuentren el talento adecuado para llevar a cabo sus proyectos.</p>
+          <img src="../../assets/img/auto3d.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-sm-block">
+            <h3 style="color: white;">AUTOMATIZACIÓN</h3>
+            <p style="color: white;">Facilitar la contratación de expertos en automatización y asegurar que las empresas encuentren el talento adecuado para llevar a cabo sus proyectos.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../../assets/img/arquitect.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <img src="../../assets/img/arquit1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-sm-block">
           
-            <h3>DISEÑO DE ARQUITECTURA</h3>
-            <p>Contamos con un equipo de arquitectos altamente capacitados y experimentados que están listos para transformar tus ideas en realidad.</p>
+            <h3 style="color: white;">DISEÑO DE ARQUITECTURA</h3>
+            <p style="color: white;">Contamos con un equipo de arquitectos altamente capacitados y experimentados que están listos para transformar tus ideas en realidad.</p>
           </div>
         </div>
       </div>
