optimizing SEARCH pending

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,6 +35,9 @@
     </div>
   </div>
 </section>
+
+
+
 <div class="container mt-2">
   <div class="carousel-wrapper">
     <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
@@ -79,6 +82,45 @@
     </div>
   </div>
 
+  <section class="mt-3">
+    <div class="accordion accordion-flush " id="accordionFlushExample">
+      <div class="accordion-item" style="background-image: url('../../assets/img/landingMinka.jpg');">
+        <h2 class="accordion-header" id="flush-headingOne">
+          <button class="accordion-button collapsed bg-success" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" 
+          style="color: white"
+          aria-controls="flush-collapseOne"
+          >
+            Nuestra misión
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body" style="color: white;">Trabajamos para facilitar y agilizar el proceso de contratación, brindando a las empresas y a los profesionales una herramienta confiable y eficiente para conectarse y colaborar.</div>
+        </div>
+      </div>
+      <div class="accordion-item " style="background-image: url('../../assets/img/landingMinka.jpg');">
+        <h2 class="accordion-header" id="flush-headingTwo">
+          <button class="accordion-button collapsed bg-success" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo"
+          style="color: white">
+            Nuestra visión
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body" style="color: white">Todos en la plataforma: ya sea un cliente, un contratista o un empleado de nuestra empresa, son un eslabón importante en la cadena de un proyecto exitoso. Este es el lugar donde los profesionales se encuentran entre sí.</div>
+        </div>
+      </div>
+      <div class="accordion-item " style="background-image: url('../../assets/img/landingMinka.jpg');">
+        <h2 class="accordion-header" id="flush-headingThree">
+          <button class="accordion-button collapsed bg-success" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree"
+          style="color: white">
+            Nuestro objetivo 
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body" style="color: white">Crear una <strong>comunidad de profesionales</strong>  en Mink'a. Juntos mejoramos, juntos nos volvemos más eficientes y productivos.</div>
+        </div>
+      </div>
+    </div>
+  </section>
 
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
