--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -75,7 +75,7 @@
     <div class=" col-lg-4">
       <div class=" card card-chart">
         <div class=" card-header">
-          <h5 class=" card-category">Total Shipments</h5>
+          <h5 class=" card-category">Total Rendimiento</h5>
           <h3 class=" card-title">
             <i class=" tim-icons icon-bell-55 text-danger-states"> </i> 763,215
           </h3>
@@ -186,11 +186,9 @@
                     </div>
                   </td>
                   <td>
-                    <p class=" title">GDPR Compliance</p>
+                    <p class=" title">Cumplimiento del RGPD </p>
                     <p class=" text-muted">
-                      The GDPR is a regulation that requires businesses to
-                      protect the personal data and privacy of Europe citizens
-                      for transactions that occur within EU member states.
+                      El RGPD es una regulación que exige a las empresas proteger los datos personales y la privacidad de los ciudadanos europeos para las transacciones que se llevan a cabo dentro de los estados miembros de la UE.
                     </p>
                   </td>
                   <td class=" td-actions text-right">
@@ -217,7 +215,7 @@
                     </div>
                   </td>
                   <td>
-                    <p class=" title">Demo Minka Release v0.0.1</p>
+                    <p class=" title">Demo Minka Release v 0.1.6</p>
                     <p class=" text-muted">
                       Mink'a S.C.P, Barcelona, Spain 11:19 AM
                     </p>
