--- a/src/app/pages/icons/icons.component.html
+++ b/src/app/pages/icons/icons.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class=" card-body all-icons">
           <div class=" row">
-            <div class=" col-md-4">
+            <div class=" col-md-6">
               <div class=" card card-user">
                 <div class=" card-body">
                   <p class=" card-text"></p>
@@ -55,7 +55,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-md-4">
+            <div class=" col-md-6">
               <div class=" card card-user">
                 <div class=" card-body">
                   <p class=" card-text"></p>
@@ -72,7 +72,7 @@
                     <p class=" description">Frontend Developer. Co-Fundador de Mink'a.</p>
                   </div>
                   <div class=" card-description">
-                    "Mink'a es la plataforma en línea de contratos. Es el lugar donde los profesionales se encuentran con otros profesionales. Donde los proyectos industriales se hacen realidad. Donde los grandes sueños pueden convertirse en metas simples y su logro consiste en planificar mucho, trabajar duro y estar inspirado para hacer del mundo un lugar mejor. ¡Bienvenido a la comunidad profesional! ¡Bienvenido a Mink'a!"
+                    "¡Bienvenido a Mink'a! Aunque te encuentras en la versión demo, ya puedes vislumbrar la semilla que hemos plantado. Estamos creando una plataforma, un espacio y una comunidad en línea para los proyectos cotidianos en la vida real. Nuestro objetivo es desarrollar una aplicación que sea útil para ti. Desde el principio, hemos pensado y cuidado cada píxel de Mink'a para facilitar, hacer más productiva y eficiente la contratación de profesionales en el sector de la Industria."
                   </div>
                 </div>
                 <div class=" card-footer">
