--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -4,61 +4,61 @@
     <div class=" col-md-12">
       <div class=" card">
         <div class=" card-header">
-          <h4 class=" card-title">Simple Table</h4>
+          <h4 class=" card-title">Mis Proyectos</h4>
         </div>
         <div class=" card-body">
           <div class=" table-responsive">
             <table class=" table tablesorter" id="">
               <thead class=" text-primary">
                 <tr>
-                  <th>Name</th>
-                  <th>Country</th>
-                  <th>City</th>
-                  <th class=" text-center">Salary</th>
+                  <th>Empresas</th>
+                  <th>Titulo del proyecto</th>
+                  <th>Fecha limite</th>
+                  <th class=" text-center">Presupuesto</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>Dakota Rice</td>
-                  <td>Niger</td>
-                  <td>Oud-Turnhout</td>
-                  <td class=" text-center">$36,738</td>
+                  <td>Inditex</td>
+                  <td>Reparación y mantenimiento de sistemas de iluminación </td>
+                  <td>30/09/2023</td>
+                  <td class=" text-center">€36,738</td>
                 </tr>
                 <tr>
-                  <td>Minerva Hooper</td>
-                  <td>CuraÃ§ao</td>
-                  <td>Sinaai-Waas</td>
-                  <td class=" text-center">$23,789</td>
+                  <td>Repsol</td>
+                  <td>Instalación de sistemas de climatización y ventilación</td>
+                  <td>15/12/2023</td>
+                  <td class=" text-center">€23,789</td>
                 </tr>
                 <tr>
-                  <td>Sage Rodriguez</td>
-                  <td>Netherlands</td>
-                  <td>Baileux</td>
-                  <td class=" text-center">$56,142</td>
+                  <td>SEAT</td>
+                  <td>Reparación de equipos y maquinaria</td>
+                  <td>31/10/2023</td>
+                  <td class=" text-center">€56,142</td>
                 </tr>
                 <tr>
-                  <td>Philip Chaney</td>
-                  <td>Korea, South</td>
-                  <td>Overland Park</td>
-                  <td class=" text-center">$38,735</td>
+                  <td>HELLER Ibérica</td>
+                  <td>Reparación de Centros de mecanizado de 4 ejes H</td>
+                  <td>30/11/2023</td>
+                  <td class=" text-center">€38,735</td>
                 </tr>
                 <tr>
-                  <td>Doris Greene</td>
-                  <td>Malawi</td>
-                  <td>Feldkirchen in KÃ¤rnten</td>
-                  <td class=" text-center">$63,542</td>
+                  <td>Iberdrola</td>
+                  <td>Análisis de consumos</td>
+                  <td>15/10/2023</td>
+                  <td class=" text-center">€63,542</td>
                 </tr>
                 <tr>
-                  <td>Mason Porter</td>
-                  <td>Chile</td>
-                  <td>Gloucester</td>
-                  <td class=" text-center">$78,615</td>
+                  <td>Telefónica</td>
+                  <td>Reparación de cableado estructurado</td>
+                  <td>01/12/2023</td>
+                  <td class=" text-center">€78,615</td>
                 </tr>
                 <tr>
-                  <td>Jon Porter</td>
-                  <td>Portugal</td>
-                  <td>Gloucester</td>
-                  <td class=" text-center">$98,615</td>
+                  <td>Airbus</td>
+                  <td> Servicios de reparación en ensamblaje de aeronaves.</td>
+                  <td>31/01/2025</td>
+                  <td class=" text-center">€98,615</td>
                 </tr>
               </tbody>
             </table>
@@ -66,71 +66,6 @@
         </div>
       </div>
     </div>
-    <div class=" col-md-12">
-      <div class=" card card-plain">
-        <div class=" card-header">
-          <h4 class=" card-title">Table on Plain Background</h4>
-          <p class=" category">Here is a subtitle for this table</p>
-        </div>
-        <div class=" card-body">
-          <div class=" table-responsive">
-            <table class=" table tablesorter" id="">
-              <thead class=" text-primary">
-                <tr>
-                  <th>Name</th>
-                  <th>Country</th>
-                  <th>City</th>
-                  <th class=" text-center">Salary</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Dakota Rice</td>
-                  <td>Niger</td>
-                  <td>Oud-Turnhout</td>
-                  <td class=" text-center">$36,738</td>
-                </tr>
-                <tr>
-                  <td>Minerva Hooper</td>
-                  <td>CuraÃ§ao</td>
-                  <td>Sinaai-Waas</td>
-                  <td class=" text-center">$23,789</td>
-                </tr>
-                <tr>
-                  <td>Sage Rodriguez</td>
-                  <td>Netherlands</td>
-                  <td>Baileux</td>
-                  <td class=" text-center">$56,142</td>
-                </tr>
-                <tr>
-                  <td>Philip Chaney</td>
-                  <td>Korea, South</td>
-                  <td>Overland Park</td>
-                  <td class=" text-center">$38,735</td>
-                </tr>
-                <tr>
-                  <td>Doris Greene</td>
-                  <td>Malawi</td>
-                  <td>Feldkirchen in KÃ¤rnten</td>
-                  <td class=" text-center">$63,542</td>
-                </tr>
-                <tr>
-                  <td>Mason Porter</td>
-                  <td>Chile</td>
-                  <td>Gloucester</td>
-                  <td class=" text-center">$78,615</td>
-                </tr>
-                <tr>
-                  <td>Jon Porter</td>
-                  <td>Portugal</td>
-                  <td>Gloucester</td>
-                  <td class=" text-center">$98,615</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
+
   </div>
 </div>
