--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,12 +2,12 @@
   <div class=" container-fluid">
     <ul class=" nav">
        <li class=" nav-item">
-        <a class="nav-link" href="/privacy" target="_blank">
+        <a class="nav-link" routerLink="/politica" target="_blank">
           Politica de Privacidad
         </a>
       </li>
       <li class=" nav-item">
-        <a class="nav-link" href="/" target="_blank">
+        <a class="nav-link" href="" target="_blank">
           Inicio
         </a>
       </li>
